cloudformation/templates/json/NetworkingStack.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Stack containing Networking Resources",
    "Outputs": {
        "EMRMasterSecurityGroup": {
            "Description": "Security group to enable some app ports for Master Node",
            "Value": {
                "Ref": "EMRMasterSecurityGroup"
            }
        },
        "GenericEMRSubnet": {
            "Description": "Public Subnet for Generic EMR Cluster",
            "Value": {
                "Ref": "GenericEMRSubnet"
            }
        },
        "JupyterEMRSubnet": {
            "Description": "Public Subnet for Jupyter EMR Cluster",
            "Value": {
                "Ref": "GenericEMRSubnet"
            }
        }
    },
    "Resources": {
        "EC2PublicSubnet": {
            "Properties": {
                "AvailabilityZone": "eu-west-1a",
                "CidrBlock": "172.31.1.0/24",
                "MapPublicIpOnLaunch": "true",
                "Tags": [
                    {
                        "Key": "AZ",
                        "Value": "eu-west-1"
                    },
                    {
                        "Key": "Name",
                        "Value": "generic-ec2-public-subnet"
                    },
                    {
                        "Key": "StackName",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    }
                ],
                "VpcId": "vpc-8b708fec"
            },
            "Type": "AWS::EC2::Subnet"
        },
        "EMRMasterSecurityGroup": {
            "Properties": {
                "GroupDescription": "Enable Apps port for Master Node",
                "SecurityGroupIngress": [
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "22",
                        "IpProtocol": "tcp",
                        "ToPort": "22"
                    },
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "80",
                        "IpProtocol": "tcp",
                        "ToPort": "80"
                    },
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "8088",
                        "IpProtocol": "tcp",
                        "ToPort": "8088"
                    },
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "18080",
                        "IpProtocol": "tcp",
                        "ToPort": "18080"
                    },
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "8888",
                        "IpProtocol": "tcp",
                        "ToPort": "8888"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "emr-master-sg"
                    },
                    {
                        "Key": "StackName",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    }
                ],
                "VpcId": "vpc-8b708fec"
            },
            "Type": "AWS::EC2::SecurityGroup"
        },
        "GenericEC2SubnetRouteTableAssociation": {
            "Properties": {
                "RouteTableId": "rtb-1197ed76",
                "SubnetId": {
                    "Ref": "EC2PublicSubnet"
                }
            },
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        },
        "GenericEMRSubnet": {
            "Properties": {
                "AvailabilityZone": "eu-west-1a",
                "CidrBlock": "172.31.2.0/24",
                "MapPublicIpOnLaunch": "true",
                "Tags": [
                    {
                        "Key": "AZ",
                        "Value": "eu-west-1"
                    },
                    {
                        "Key": "Name",
                        "Value": "generic-emr-public-subnet"
                    },
                    {
                        "Key": "StackName",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    }
                ],
                "VpcId": "vpc-8b708fec"
            },
            "Type": "AWS::EC2::Subnet"
        },
        "GenericEMRSubnetRouteTableAssociation": {
            "Properties": {
                "RouteTableId": "rtb-1197ed76",
                "SubnetId": {
                    "Ref": "GenericEMRSubnet"
                }
            },
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        },
        "JupyterEMRSubnet": {
            "Properties": {
                "AvailabilityZone": "eu-west-1a",
                "CidrBlock": "172.31.3.0/24",
                "MapPublicIpOnLaunch": "true",
                "Tags": [
                    {
                        "Key": "AZ",
                        "Value": "eu-west-1"
                    },
                    {
                        "Key": "Name",
                        "Value": "jupyter-emr-public-subnet"
                    },
                    {
                        "Key": "StackName",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    }
                ],
                "VpcId": "vpc-8b708fec"
            },
            "Type": "AWS::EC2::Subnet"
        },
        "JupyterEMRSubnetRouteTableAssociation": {
            "Properties": {
                "RouteTableId": "rtb-1197ed76",
                "SubnetId": {
                    "Ref": "JupyterEMRSubnet"
                }
            },
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        }
    }
}
